# autowiki

./: Dockerfile  README.md  aggregate_benchmark.py  aggregate_p10.py  aggregate_p11.py  aggregate_p12.py  aggregate_p13.py  aggregate_p15.py  aggregate_p8.py  aggregate_p9.py  benchmark_hard_queries.json  benchmark_hard_queries.md  benchmark_results.json  benchmark_results.md  chimera_standalone.py  gnn_trained.pt  knowledge_graph.json  pyproject.toml  requirements.txt  run_benchmark.py  run_demo.py  run_hard_benchmark.py  run_query_p10.py  run_query_p11.py  run_query_p12.py  run_query_p13.py  run_query_p13_parallel.py  run_query_p14.py  run_query_p15.py  run_query_p8.py  run_query_p9.py  run_research.py  train_gnn.py
benchmark_logs/: checkpoint.json  checkpoint_p10_aggregate.json  checkpoint_p10_q1.json  checkpoint_p10_q10.json  checkpoint_p10_q11.json  checkpoint_p10_q12.json  checkpoint_p10_q13.json  checkpoint_p10_q14.json  checkpoint_p10_q15.json  checkpoint_p10_q2.json  checkpoint_p10_q3.json  checkpoint_p10_q4.json  checkpoint_p10_q5.json  checkpoint_p10_q6.json  checkpoint_p10_q7.json  checkpoint_p10_q8.json  checkpoint_p10_q9.json  checkpoint_p11_aggregate.json  checkpoint_p11_q1.json  checkpoint_p11_q10.json  checkpoint_p11_q11.json  checkpoint_p11_q12.json  checkpoint_p11_q13.json  checkpoint_p11_q14.json  checkpoint_p11_q15.json  checkpoint_p11_q2.json  checkpoint_p11_q3.json  checkpoint_p11_q4.json  checkpoint_p11_q5.json  checkpoint_p11_q6.json  checkpoint_p11_q7.json  checkpoint_p11_q8.json  checkpoint_p11_q9.json  checkpoint_p12_aggregate.json  (+104 more)
(+23 files in other folders)
